--- a/src/app/string-interpolation/string-interpolation.component.html
+++ b/src/app/string-interpolation/string-interpolation.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<!--<mat-toolbar color="primary">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
@@ -33,3 +33,5 @@
       <button mat-button disabled="true">SHARE</button>
     </mat-card-actions>
   </mat-card>
+-->
+<app-event-binding></app-event-binding>
